--- a/sniic/index.html
+++ b/sniic/index.html
@@ -1,17 +1,42 @@
-<script type="importmap">
-  {
-    "imports": {
-      "lit": "https://esm.sh/lit@^3.3.0",
-      "lit/": "https://esm.sh/lit@^3.3.0/",
-      "@lit/context": "https://esm.sh/@lit/context@^1.1.5",
-      "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
-      "three": "https://esm.sh/three@^0.176.0",
-      "three/": "https://esm.sh/three@^0.176.0/"
-    }
-  }
-</script>
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SNIIC 2.0 - Assistente Cultural Nacional</title>
+
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' 'unsafe-eval' 'unsafe-inline' https://esm.sh https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+    script-src-elem 'self' 'unsafe-inline' https://esm.sh https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+    connect-src 'self' https://generativelanguage.googleapis.com https://*.googleapis.com wss://generativelanguage.googleapis.com wss://*.googleapis.com https://esm.sh;
+    style-src 'self' 'unsafe-inline';
+    img-src 'self' data: blob:;
+    media-src 'self' blob:;
+    worker-src 'self' blob:;
+  ">
+
+  <link rel="stylesheet" href="/index.css">
+</head>
+
 <body>
+  <script type="importmap">
+    {
+      "imports": {
+        "lit": "https://esm.sh/lit@^3.3.0",
+        "lit/": "https://esm.sh/lit@^3.3.0/",
+        "@lit/context": "https://esm.sh/@lit/context@^1.1.5",
+        "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
+        "three": "https://esm.sh/three@^0.176.0",
+        "three/": "https://esm.sh/three@^0.176.0/"
+      }
+    }
+  </script>
+
   <gdm-live-audio></gdm-live-audio>
-<script type="module" src="/index.tsx"></script>
+
+  <script type="module" src="/index.tsx"></script>
 </body>
-<link rel="stylesheet" href="/index.css">
+
+</html>
